# C17Test

./: CMakeLists.txt  main.c  main.h  u_stdint.h
ChiChi/: 220805.c  220805.h  m_main.c
file/: m_file.c  m_file.h  textFile.txt
u_linkedList/: u_linkedList.c  u_linkedList.h
u_queue/: u_queue.c  u_queue.h  u_queue_main.c  u_queue_main.h
u_stack/: u_stack.c  u_stack.h
